--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body>
       
       
-      <div id="searchPanel">
+    <div id="searchPanel">
     <input id="address" type="textbox" value="Enter a City">
     <input id="radius" type="number" value="15">
-    <input type="button" value="Find Colleges!" onclick="codeAddress()">
+    <input type="button" value="Find Colleges!" onsubmit="codeAddress()">
   </div>
     <div id="map-canvas"/>
    
