--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       
       
     <div id="searchPanel">
-    <input id="address" type="textbox" value="Enter a City">
+    <input id="address" type="textbox" value="Enter a City" onkeydown="if (event.keyCode == 13) document.getElementById('find').click()">
     <input id="radius" type="number" value="15">
-    <input type="button" value="Find Colleges!" onsubmit="codeAddress()">
+    <input id="find" type="button" value="Find Colleges!" onclick="codeAddress()">
   </div>
     <div id="map-canvas"/>
    
