--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     <div id="searchPanel">
     <input id="address" type="textbox" value="Enter a City" onkeydown="if (event.keyCode == 13) document.getElementById('find').click()">
-    <input id="radius" type="number" value="15">
+    <input id="radius" type="textbox" value=15>
     <input id="find" type="button" value="Find Colleges!" onclick="zoomOnLocation()">
   </div>
     <div id="map-canvas"/>
