Sidebar now displays

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <input id="radius" type="textbox" value=15>
     <input id="find" type="button" value="Find Colleges!" onclick="zoomOnLocation()">
   </div>
-    <div id="map-canvas"/>
+  <div id="sidebar">
+      
+  </div>
+  <div id="map-canvas"/>
    
 
   </body>
-  <script type="text/javascript" src="js/loadmap.js">
-      
-    </script>
+  <script type="text/javascript" src="js/loadmap.js"></script>
+    <script type="text/javascript" src="js/sidebar.js"></script>
 </html>
