--- a/index.html
+++ b/index.html
@@ -25,8 +25,29 @@
   <div id="sidebarHide">
       <div id="TCNJ">
         <input type="button" value="Back to College List">
-        <input type="button" value="Show Tweets">
-
+        <input type="button" id="switch" value="Show Tweets">
+        <div class="infoStuff">
+          <ul >
+            <li>Address: 2000 Pennington Rd, Ewing Township, NJ 08618</li>
+            <li>Acceptance Rate: 0.46</li>
+            <li>Total Enrollment: 7270</li>
+            <li>In-State Tuition: 14378</li>
+            <li>SAT Reading 25%: 550</li>
+            <li>SAT Reading 75%: 650</li>
+            <li>SAT Math 25%: 580</li>
+            <li>SAT Math 75%: 680</li>
+            <li>SAT Writing 25%: 560</li>
+            <li>SAT Writing 75%: 670</li>
+            <li>Percent male: 0.43</li>
+            <li>Percentage Aid: 0.8</li>
+            <li>4 Year Graduation rate: 0.72 </li>
+            <li>Retention rate:0.94</li>
+          </ul>
+          <h6>Comments</h6>
+          <input id = "textbox" type="text" value="some text">
+          <input id = "comment_button" type="button" value="Submit">
+          <p></p>
+        </div>
       <a class="twitter-timeline" href="https://twitter.com/davidmelvinjr" data-widget-id="437598626718556160">Tweets by @davidmelvinjr</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
@@ -53,6 +74,14 @@
     <script src="js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="js/loadmap.js"></script>
     <script type="text/javascript" src="js/side.js"></script> 
+    <script>
+$( "#comment_button" )
+  .click(function() {
+    var value = $( "#textbox" ).val();
+    $( "p" ).text( value );
+  })
+  
+</script>
   </body>  
   
 </html>
